--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "ping": "^0.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "class-validator": "^0.14.1",
+    "class-transformer": "^0.5.1"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
