--- a/libs/electricity-availability/project.json
+++ b/libs/electricity-availability/project.json
@@ -6,9 +6,23 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["libs/electricity-availability/**/*.ts"]
+        "lintFilePatterns": [
+          "libs/electricity-availability/**/*.ts"
+        ]
+      }
+    },
+    "test": {
+      "executor": "@nrwl/jest:jest",
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
+      "options": {
+        "jestConfig": "libs/electricity-availability/jest.config.ts",
+        "passWithNoTests": true
       }
     }
   },
